--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Tutorial Flask: Miniblog</title>
-</head>
-<body>
-    {{ num_posts }} posts con el template
-</body>
-</html>
+{% extends "base_template.html" %}
+
+{% block title %}Tutorial Flask: Miniblog{% endblock %}
+
+{% block content %}
+    {{ num_posts }} posts
+{% endblock %}
